CHROMIUM: config: enable CONFIG_ARM_QCOM_CPUFREQ_NVMEM for qualcomm
Signed-off-by: Niklas Cassel <niklas.cassel@linaro.org>

BUG=b:129558664
TEST=Validate DVFS and schedutil governor
Git-repo: https://git.linaro.org/people/niklas.cassel/kernel.git
Git-commit: ac3fbfb0dc51a43036c0477b8c5bc68831fed697
Signed-off-by: Praveen Koya <pkoya@codeaurora.org>

Change-Id: Id6a4731472d74ab1413b32c0eb3ce3bbecf57231
Signed-off-by: Vamsi Singamsetty <vamssi@codeaurora.org>
Signed-off-by: Khasim Syed Mohammed <khasim.mohammed@linaro.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/1664383
Reviewed-by: Zhihong Yu <zhihongyu@chromium.org>
Commit-Queue: Zhihong Yu <zhihongyu@chromium.org>
Tested-by: Zhihong Yu <zhihongyu@chromium.org>

--- a/chromeos/config/arm64/chromiumos-arm64.flavour.config
+++ b/chromeos/config/arm64/chromiumos-arm64.flavour.config
@@ -31,6 +31,7 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 CONFIG_ARM_GIC_V2M=y
 CONFIG_ARM_GIC_V3_ITS=y
 # CONFIG_ARM_MEDIATEK_CPUFREQ is not set
+# CONFIG_ARM_QCOM_CPUFREQ_NVMEM is not set
 # CONFIG_ARM_RK3399_DMC_DEVFREQ is not set
 CONFIG_ARM_SMMU=y
 # CONFIG_AT803X_PHY is not set
