--- a/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
+++ b/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
@@ -25,6 +25,7 @@ CONFIG_ARCH_QCOM=y
 # CONFIG_ARM64_ERRATUM_843419 is not set
 CONFIG_ARM_GIC_V2M=y
 CONFIG_ARM_GIC_V3_ITS=y
+CONFIG_ARM_QCOM_CPUFREQ_NVMEM=y
 CONFIG_ARM_SMMU=y
 CONFIG_AT803X_PHY=y
 # CONFIG_ATA is not set
