CHROMIUM: config: enable CONFIG_QCOM_CPR for qualcomm
Signed-off-by: Niklas Cassel <niklas.cassel@linaro.org>

BUG=b:129558664
TEST=Validate DVFS and schedutil governor
Git-repo: https://git.linaro.org/people/niklas.cassel/kernel.git
Git-commit: 741ce2da3db7e3c77ded3de525e02f1ea8e02b9f
Signed-off-by: Praveen Koya <pkoya@codeaurora.org>

Change-Id: I7dccbfe60f19bd9098504bcd1b63ba268f924f14
Signed-off-by: Vamsi Singamsetty <vamssi@codeaurora.org>
Signed-off-by: Khasim Syed Mohammed <khasim.mohammed@linaro.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/1664384
Reviewed-by: Zhihong Yu <zhihongyu@chromium.org>
Commit-Queue: Zhihong Yu <zhihongyu@chromium.org>
Tested-by: Zhihong Yu <zhihongyu@chromium.org>

--- a/chromeos/config/arm64/chromiumos-arm64.flavour.config
+++ b/chromeos/config/arm64/chromiumos-arm64.flavour.config
@@ -573,6 +573,7 @@ CONFIG_QCOM_CLK_RPMH=y
 # CONFIG_QCOM_CLK_SMD_RPM is not set
 # CONFIG_QCOM_COINCELL is not set
 CONFIG_QCOM_COMMAND_DB=y
+# CONFIG_QCOM_CPR is not set
 # CONFIG_QCOM_EBI2 is not set
 CONFIG_QCOM_GDSC=y
 CONFIG_QCOM_GENI_SE=y
