--- a/chromeos/config/arm64/chromiumos-mediatek.flavour.config
+++ b/chromeos/config/arm64/chromiumos-mediatek.flavour.config
@@ -121,6 +121,7 @@ CONFIG_PPS=m
 CONFIG_PTP_1588_CLOCK=m
 # CONFIG_PWM_MEDIATEK is not set
 CONFIG_PWM_MTK_DISP=y
+# CONFIG_QCOM_CPR is not set
 # CONFIG_QCS_WCSSCC_404 is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_RD_LZO is not set
