--- a/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
+++ b/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
@@ -517,6 +517,7 @@ CONFIG_QCOM_CLK_RPMH=y
 CONFIG_QCOM_CLK_SMD_RPM=y
 # CONFIG_QCOM_COINCELL is not set
 CONFIG_QCOM_COMMAND_DB=y
+CONFIG_QCOM_CPR=y
 # CONFIG_QCOM_EBI2 is not set
 CONFIG_QCOM_FASTRPC=y
 CONFIG_QCOM_GDSC=y
