--- a/chromeos/config/arm64/chromiumos-rockchip64.flavour.config
+++ b/chromeos/config/arm64/chromiumos-rockchip64.flavour.config
@@ -352,6 +352,7 @@ CONFIG_PPS=m
 # CONFIG_PRISM54 is not set
 CONFIG_PTP_1588_CLOCK=m
 CONFIG_PWM_ROCKCHIP=y
+# CONFIG_QCOM_CPR is not set
 # CONFIG_QCS_WCSSCC_404 is not set
 # CONFIG_QED is not set
 # CONFIG_QLA3XXX is not set
