--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -705,6 +705,7 @@ CONFIG_PWRSEQ_EMMC=y
 # CONFIG_PWRSEQ_SD8787 is not set
 CONFIG_PWRSEQ_SIMPLE=y
 # CONFIG_QCA7000_SPI is not set
+# CONFIG_QCOM_CPR is not set
 # CONFIG_QCOM_HIDMA is not set
 # CONFIG_QCOM_HIDMA_MGMT is not set
 # CONFIG_QCS_WCSSCC_404 is not set
