--- a/arch/arm64/boot/dts/qcom/qcs404-mistral.dts
+++ b/arch/arm64/boot/dts/qcom/qcs404-mistral.dts
@@ -151,34 +151,14 @@
 	};
 };
 
-&CPU0 {
-	cpu-supply = <&vsvs_apc_buck>;
-};
-
-&CPU1 {
-	cpu-supply = <&vsvs_apc_buck>;
-};
-
-&CPU2 {
-	cpu-supply = <&vsvs_apc_buck>;
-};
-
-&CPU3 {
-	cpu-supply = <&vsvs_apc_buck>;
+&cprpd {
+	vdd-apc-supply = <&vsvs_apc_buck>;
 };
 
 &cpu_opp_table {
-	opp-1094400000 {
-		opp-microvolt = <1225000 1225000 1225000>;
-	};
-
-	opp-1248000000 {
-		opp-microvolt = <1287500 1287500 1287500>;
-	};
-
 	opp-1401600000 {
 		opp-hz = /bits/ 64 <1401600000>;
-		opp-microvolt = <1356250 1356250 1356250>;
+		required-opps = <&cpr_opp3>;
 	};
 };
 
