CHROMIUM: arm64: dts: qcom: qcs404: Readd 1.4 GHz to cpu opp table
While backporting commit 1a0281bff46d ("BACKPORT: FROMLIST: arm64: dts:
qcom: qcs404: Add OPP table"), 1.4 GHz was removed because it was assumed
that 1.4 GHz required an external buck.

Engineers at Qualcomm have now verified that 1.4 GHz is fully supported
on all QCS404/QCS405 SoCs, no matter if the board uses an external buck
or not.

Readd this incorrectly removed OPP and remove the mistral override.

Signed-off-by: Niklas Cassel <niklas.cassel@linaro.org>

BUG=b:129558664
TEST=Validate DVFS and schedutil governor
Git-repo: https://git.linaro.org/people/niklas.cassel/kernel.git
Git-commit: 17432c170415ef9e849493bec9e88e5fb71ea644
Signed-off-by: Praveen Koya <pkoya@codeaurora.org>

Change-Id: I3b32b98b1915de73ddd6b063b6f6cc70ab0b4798
Signed-off-by: Vamsi Singamsetty <vamssi@codeaurora.org>
Signed-off-by: Khasim Syed Mohammed <khasim.mohammed@linaro.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/1664382
Reviewed-by: Zhihong Yu <zhihongyu@chromium.org>
Commit-Queue: Zhihong Yu <zhihongyu@chromium.org>
Tested-by: Zhihong Yu <zhihongyu@chromium.org>

--- a/arch/arm64/boot/dts/qcom/qcs404.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs404.dtsi
@@ -100,6 +100,10 @@
 			opp-hz = /bits/ 64 <1248000000>;
 			required-opps = <&cpr_opp2>;
 		};
+		opp-1401600000 {
+			opp-hz = /bits/ 64 <1401600000>;
+			required-opps = <&cpr_opp3>;
+		};
 	};
 
 	firmware {
