CHROMIUM: WAR: arm64: dts: qcom: qcs404: configure TZ PCIe clocks
Configure the clocks required by the TZ to be enabled.

(cherry picked from commit c6ce89c3f47ea3e4d88d4e0751dffc65efd320f7
https://github.com/ldts/qualcomm-lt-kernel/commits/chromiumos-4.14-r4/trust-zone-release)

BUG=b:132310400
TEST=Verifying XPU Violation in both trusted & Untrusted modes.

Change-Id: Ic26f631eb7e53595244b0ad1f976f841fdd87efd
Signed-off-by: Jorge Ramirez-Ortiz <jorge.ramirez-ortiz@linaro.org>
Signed-off-by: Praveen Koya <pkoya@codeaurora.org>
Signed-off-by: Vamsi Singamsetty <vamssi@codeaurora.org>
Signed-off-by: Khasim Syed Mohammed <khasim.mohammed@linaro.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/1662470
Reviewed-by: Zhihong Yu <zhihongyu@chromium.org>
Commit-Queue: Zhihong Yu <zhihongyu@chromium.org>
Tested-by: Zhihong Yu <zhihongyu@chromium.org>

--- a/arch/arm64/boot/dts/qcom/qcs404.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs404.dtsi
@@ -1370,6 +1370,9 @@
 		compatible = "qcom,tz-usr-iface";
 		status = "disabled";
 		interrupts = <GIC_SPI 251 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&gcc GCC_PCIE_0_CFG_AHB_CLK>,
+			 <&gcc GCC_PCIE_0_SLV_AXI_CLK>;
+		clock-names = "iface", "slave_bus";
 	};
 
 	smp2p-adsp {
